06-demystifying-networking/05-network-policies/deny-all.yaml
# deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}    # select EVERY pod
  policyTypes:
  - Ingress
